pkg/plugins/policies/meshtimeout/plugin/testdata/outbound_listener_with_different_timeouts_per_real_meshhttproute.yaml
address:
  socketAddress:
    address: 127.0.0.1
    portValue: 10001
filterChains:
- filters:
  - name: envoy.filters.network.http_connection_manager
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
      commonHttpProtocolOptions:
        idleTimeout: 0s
      httpFilters:
      - name: envoy.filters.http.router
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      internalAddressConfig:
        cidrRanges:
        - addressPrefix: 127.0.0.1
          prefixLen: 32
        - addressPrefix: ::1
          prefixLen: 128
      requestHeadersTimeout: 0s
      routeConfig:
        name: outbound:test-service-1
        requestHeadersToAdd:
        - header:
            key: x-kuma-tags
            value: '&kuma.io/display-name=web&'
        validateClusters: false
        virtualHosts:
        - domains:
          - '*'
          name: test-service-1
          routes:
          - match:
              headers:
              - name: :method
                stringMatch:
                  exact: GET
              path: /another-backend
            name: kri_mhttpr_mesh-1___test-route-1_
            route:
              cluster: test-service-1
              idleTimeout: 888s
              timeout: 88s
          - match:
              prefix: /
            name: 9Zuf5Tg79OuZcQITwBbQykxAk2u4fRKrwYn3//AL4Yo=
            route:
              cluster: test-service-1
              idleTimeout: 999s
              timeout: 99s
      statPrefix: outbound_127_0_0_1_10001
name: outbound:127.0.0.1:10001
trafficDirection: OUTBOUND
